# FinalProject

./: Predicting Forest Fires.ipynb  README.md  main (7).py  main.py  pyproject.toml
src/: config.py  data_loader.py  model_evaluation.py  plotting.py  utils.py
statistic_tables/: train_test_scores.txt  train_test_scores_log.txt  train_test_scores_raw.txt  tuned_log (1).txt  tuned_log.csv  tuned_log.txt  tuned_raw (1).txt  tuned_raw.csv  tuned_raw.txt  untuned_log (1).txt  untuned_log.csv  untuned_log.txt  untuned_raw (1).txt  untuned_raw.csv  untuned_raw.txt
