[project]
name = "FinalProject"
version = "0.1.0"
description = "Evaluating 4 different types of regression models and comparing the scores"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.4.2"
]
